made the dashboard pages dynamic
